[fix] Champ lieu pour l'ajout du nom + alignement vertical dans les tableaux

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -160,6 +160,10 @@ div.login-box .help-inline {
 
 /* Adapt Datatables to Twitter Bootstrap */
 
+.table thead th {
+	vertical-align: middle;
+}
+
 div.dataTables_length label {
 	float: left;
 	text-align: left;
